@@ -5,6 +5,7 @@ django-profile Changelog
 Development version
 -------------------
 
+* Make the Continent/Country models compatible with the new newforms-admin interface. Thanks to Alvaro Mouriño.
 * Corrected a misspellings on the documentation. Thanks to paltman.
 
 Version 0.5.0
